Layout for iphone 5

--- a/FAQ.html
+++ b/FAQ.html
@@ -57,7 +57,7 @@
 
         <section class="article">
 
-            <ul class="faq-tab-links">
+            <ul class="faq-tab-links cf">
                 <li class="active"><a href="#how_it_works" data-toggle="tab">How it works</a></li>
                 <li><a href="#faq" data-toggle="tab">FAQ</a></li>
                 <li><a href="#foodie_profile_tips" data-toggle="tab">Foodie profile tips</a></li>
