--- a/chef-account-settings.html
+++ b/chef-account-settings.html
@@ -141,7 +141,7 @@
                         <label>Are you willing to travel ?</label>
                         <input type="checkbox" class="hidden" id="willing-to-travel-value">
                         <div class="row willing-to-travel-switcher-container">
-                            <div class="col-lg-6 col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-6 col-sm-12 cf">
                                 <div class="switcher-container on">
                                     <div class="switcher-text-yes">Yes</div>
                                     <div class="switcher-text-no">No</div>
