--- a/chef-profile.html
+++ b/chef-profile.html
@@ -190,7 +190,7 @@
         <section class="chef-profile-additional-information">
             <div class="container-880">
 
-                <ul class="tab-links-container">
+                <ul class="tab-links-container cf">
                     <li class="active"><a href="#cooking_style"  data-toggle="tab"><span>Cooking Style</span></a></li>
                     <li><a href="#experience"  data-toggle="tab"><span>Experience</span></a></li>
                     <li><a href="#additional_info"  data-toggle="tab"><span>Additional Information</span></a></li>
