--- a/chef_account-schedule.html
+++ b/chef_account-schedule.html
@@ -102,13 +102,14 @@
                 </div>
                 <div class="account-container-gray">
 
-                    <ul class="faq-tab-links not-active-gray-link">
+                    <ul class="faq-tab-links cf not-active-gray-link">
                         <li class="active"><a href="#all_bookings" data-toggle="tab">All bookings</a></li>
                         <li><a href="#pending_bookings" data-toggle="tab">Pending Bookings</a></li>
                     </ul>
 
                     <div class="tabs-container tab-content schedule-tabs">
                         <div id="all_bookings" class="active tab-pane">
+
                             <div class="row schedules-row">
                                 <div class="schedule-item col-lg-6 col-md-6 col-sm-12">
                                     <div class="schedule-datetime cf">
@@ -149,9 +150,6 @@
                                         <span class="btn btn-schedule-status pending-approval">Pending Approval</span>
                                     </div>
                                 </div>
-                            </div>
-
-                            <div class="row schedules-row">
                                 <div class="schedule-item col-lg-6 col-md-6 col-sm-12">
                                     <div class="schedule-datetime cf">
                                         <icon class="icon schedule-pending"></icon>
@@ -191,9 +189,6 @@
                                         <span class="btn btn-schedule-status canceled">Canceled</span>
                                     </div>
                                 </div>
-                            </div>
-
-                            <div class="row schedules-row">
                                 <div class="schedule-item col-lg-6 col-md-6 col-sm-12">
                                     <div class="schedule-datetime cf">
                                         <icon class="icon schedule-booking-accepted"></icon>
@@ -333,16 +328,16 @@
                 <a href="#" class="glyphicon glyphicon-remove close-modal" data-dismiss="modal"></a>
                 <div class="custom-modal-header no-padding with-icon"><span class="icon pending-approval-at-modal"></span> Pending Approval</div>
                 <div class="row">
-                    <div class="col-xs-6 text-center">
+                    <div class="col-lg-6 col-sm-12 text-center">
                         <div class="approval-consumers cf">
-                            <div class="col-xs-6">
+                            <div class="col-lg-6 col-sm-12">
                                 <div class="approval-image">
                                     <img src="img/no-avatar.png" alt="">
                                 </div>
                                 <div class="approval-status">Chef</div>
                                 <div class="approval-name">Dadisy</div>
                             </div>
-                            <div class="col-xs-6">
+                            <div class="col-lg-6 col-sm-12">
                                 <div class="approval-image">
                                     <img src="img/no-avatar.png" alt="">
                                 </div>
@@ -364,7 +359,7 @@
                         </div>
 
                     </div>
-                    <div class="col-xs-6">
+                    <div class="col-lg-6 col-sm-12">
                         <div class="chef-modal-par-head">Menu selected</div>
                         <div class="chef-modal-par-simple bold">Creaole vibrations</div>
                         <div class="chef-modal-par-head">Booking request date</div>
@@ -378,11 +373,11 @@
                         <div class="chef-modal-par-head">People</div>
                         <div class="chef-modal-par-simple bold">6</div>
                         <div class="row">
-                            <div class="col-xs-6 text-left">
+                            <div class="col-lg-6 col-sm-12 text-left">
                                 <div class="chef-modal-par-head">Agree price</div>
                                 <div class="chef-modal-par-simple bold">USD 23</div>
                             </div>
-                            <div class="col-xs-6 text-left">
+                            <div class="col-lg-6 col-sm-12 text-left">
                                 <div class="chef-modal-par-head">Agree price</div>
                                 <div class="chef-modal-par-simple bold">USD 23</div>
                             </div>
@@ -391,10 +386,10 @@
                 </div>
                 <div class="custom-modal-footer">
                     <div class="row">
-                        <div class="col-xs-6">
+                        <div class="col-lg-6 col-sm-12">
                             <a href="#" class="btn btn-orange pre-approve">Pre-Approve/Decline</a>
                         </div>
-                        <div class="col-xs-6">
+                        <div class="col-lg-6 col-sm-12">
                             <a href="#" class="btn btn-white pre-approve">Let's discuss more</a>
                         </div>
                     </div>
@@ -413,8 +408,8 @@
                 <a href="#" class="glyphicon glyphicon-remove close-modal" data-dismiss="modal"></a>
                 <div class="custom-modal-header no-padding with-icon"><span class="icon pending-approval-at-modal"></span> Past Booking</div>
                 <div class="row">
-                    <div class="col-xs-6 text-center">
-                        <div class="approval-consumers cf">
+                    <div class="col-lg-6 col-sm-12 text-center">
+                        <div class="approval-consumers row cf">
                             <div class="col-xs-6">
                                 <div class="approval-image">
                                     <img src="img/no-avatar.png" alt="">
@@ -444,7 +439,7 @@
                         </div>
 
                     </div>
-                    <div class="col-xs-6">
+                    <div class="col-lg-6 col-sm-12">
                         <div class="chef-modal-par-head">Menu selected</div>
                         <div class="chef-modal-par-simple bold">Creaole vibrations</div>
                         <div class="chef-modal-par-head">Booking request date</div>
@@ -458,11 +453,11 @@
                         <div class="chef-modal-par-head">People</div>
                         <div class="chef-modal-par-simple bold">6</div>
                         <div class="row">
-                            <div class="col-xs-6 text-left">
+                            <div class="col-lg-6 col-sm-12 text-left">
                                 <div class="chef-modal-par-head">Agree price</div>
                                 <div class="chef-modal-par-simple bold">USD 23</div>
                             </div>
-                            <div class="col-xs-6 text-left">
+                            <div class="col-lg-6 col-sm-12 text-left">
                                 <div class="chef-modal-par-head">Agree price</div>
                                 <div class="chef-modal-par-simple bold">USD 23</div>
                             </div>
@@ -483,20 +478,20 @@
                 <a href="#" class="glyphicon glyphicon-remove close-modal" data-dismiss="modal"></a>
                 <div class="custom-modal-header no-padding with-icon"><span class="icon pending-approval-at-modal"></span> Pre-Approve</div>
                 <div class="row">
-                    <div class="col-xs-6">
+                    <div class="col-lg-6 col-sm-12">
                         <div class="pre-approve-consumer row">
-                            <div class="col-xs-3">
+                            <div class="col-xs-3 col-sm-6">
                                 <img src="img/no-avatar.png" alt="" class="pre-approve-image">
                             </div>
-                            <div class="col-xs-9">
+                            <div class="col-xs-12">
                                 <div class="approval-status">Host</div>
                                 <div class="approval-name">Carl</div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-6">
+                    <div class="col-lg-6 col-sm-12">
                         <div class="pre-approve-consumer row">
-                            <div class="col-xs-9">
+                            <div class="col-xs-9 col-sm-12">
                                 <div class="approval-status">menu</div>
                                 <div class="approval-name">Creole Violence</div>
                             </div>
@@ -504,7 +499,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xs-6">
+                    <div class="col-lg-6 col-sm-12">
                         <div class="chef-modal-par-head">Booking request date</div>
                         <div class="chef-modal-par-simple bold">Thu, Jul 06 2015</div>
                         <div class="chef-modal-par-head">Address of event</div>
@@ -516,7 +511,7 @@
                         <div class="chef-modal-par-head">Price</div>
                         <div class="chef-modal-par-simple bold">USD 23 <small>If tou wish to ammend the price, please, click on a "Make new price offer" below</small> </div>
                     </div>
-                    <div class="col-xs-6">
+                    <div class="col-lg-6 col-sm-12">
                         <div class="chef-modal-par-head">Events date</div>
                         <div class="chef-modal-par-simple bold">Thu, Jul 06 2015</div>
                         <div class="chef-modal-par-head">Event time</div>
@@ -565,10 +560,10 @@
                             </div>
                         </div>
                         <div class="row bussy-datepicker-container">
-                            <div class="col-xs-6">
+                            <div class="col-lg-6">
                                 <input type="text" class="chefxchange-input with-bg calendar-left datepicker inputs-seria" placeholder="Choose date">
                             </div>
-                            <div class="col-xs-6">
+                            <div class="col-lg-6">
                                 <input type="text" class="chefxchange-input with-bg clock inputs-seria" placeholder="Time">
                             </div>
 
@@ -595,7 +590,7 @@
                 <a href="#" class="glyphicon glyphicon-remove close-modal" data-dismiss="modal"></a>
                 <div class="custom-modal-header no-padding with-icon color-orange"><span class="icon chef-rank expert"></span> Accepted by Chef</div>
                 <div class="row">
-                    <div class="col-xs-6">
+                    <div class="col-lg-6 col-sm-12">
                         <div class="pre-approve-consumer row">
                             <div class="col-xs-3">
                                 <img src="img/no-avatar.png" alt="" class="pre-approve-image">
@@ -606,7 +601,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-6">
+                    <div class="col-lg-6 col-sm-12">
                         <div class="pre-approve-consumer row">
                             <div class="col-xs-9">
                                 <div class="approval-status">menu</div>
@@ -616,7 +611,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xs-6">
+                    <div class="col-lg-6 col-sm-12">
                         <div class="chef-modal-par-head">Booking request date</div>
                         <div class="chef-modal-par-simple bold">Thu, Jul 06 2015</div>
                         <div class="chef-modal-par-head">Address of event</div>
@@ -628,7 +623,7 @@
                         <div class="chef-modal-par-head">Price</div>
                         <div class="chef-modal-par-simple bold">USD 23 <small>If tou wish to ammend the price, please, click on a "Make new price offer" below</small> </div>
                     </div>
-                    <div class="col-xs-6">
+                    <div class="col-lg-6 col-sm-12">
                         <div class="chef-modal-par-head">Events date</div>
                         <div class="chef-modal-par-simple bold">Thu, Jul 06 2015</div>
                         <div class="chef-modal-par-head">Event time</div>
@@ -643,10 +638,10 @@
                 </div>
                 <div class="custom-modal-footer">
                     <div class="row">
-                        <div class="col-xs-6">
+                        <div class="col-lg-6 col-sm-12">
                             <a href="#" class="btn btn-orange pre-approve">Pre-Approve/Decline</a>
                         </div>
-                        <div class="col-xs-6">
+                        <div class="col-lg-6 col-sm-12">
                             <a href="#" class="btn btn-white pre-approve">Let's discuss more</a>
                         </div>
                     </div>
