--- a/search-result.html
+++ b/search-result.html
@@ -74,7 +74,7 @@
             <div class="row search-white-line">
                 <div class="search-chef-ranking col-lg-5 col-md-5 col-sm-12">
                     <div class="search-option-title">Chef Ranking:</div>
-                    <div class="search-chef-ranking-cheks">
+                    <div class="search-chef-ranking-cheks cf">
 
                         <a href="#" class="search-rank-changer" data-value="1">
                             <span class="icon novice chef-rank"></span>  Amatour
@@ -88,7 +88,7 @@
                         <input type="hidden" id="ranking_value_at_search">
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-2 col-sm-3 text-center">
+                <div class="col-lg-2 col-md-2 col-sm-3 text-center search-currencies">
                     <div class="search-option-title">Currency:</div>
                     <select class="fancySelect">
                         <option value="1">USD</option>
@@ -96,7 +96,7 @@
                         <option value="1">RUR</option>
                     </select>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-4">
+                <div class="col-lg-3 col-md-3 col-sm-4 search-price-container">
                     <div class="search-option-title">
                         Price:
                         <span class="price-view">
