--- a/terms-and-privacy.html
+++ b/terms-and-privacy.html
@@ -54,7 +54,7 @@
 
         <section class="article a-lot-of-text">
 
-            <ul class="faq-tab-links">
+            <ul class="faq-tab-links cf">
                 <li class="active"><a href="#terms" data-toggle="tab">Terms</a></li>
                 <li><a href="#privacy" data-toggle="tab">Privacy</a></li>
             </ul>
